--- a/templates/docker-compose.yml.template
+++ b/templates/docker-compose.yml.template
@@ -40,7 +40,7 @@ services:
       N8N_BASIC_AUTH_USER: "admin"
       N8N_BASIC_AUTH_PASSWORD: "changeme"
       # База данных
-      DB_TYPE: postgres
+      DB_TYPE: postgresdb
       DB_POSTGRESDB_HOST: postgres
       DB_POSTGRESDB_PORT: 5432
       DB_POSTGRESDB_DATABASE: postgres
